fix overflow X on .main

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -213,7 +213,7 @@ a {
     align-items: stretch;
     flex: 1;
     z-index: 2;
-    margin-left: var(--sidebar-closed-width);
+    padding-left: var(--sidebar-closed-width);
 
     .topbar {
       display: flex;
@@ -279,7 +279,7 @@ a {
       }
     }
     .main {
-      margin-left: 0 !important;
+      padding-left: 0 !important;
 
       .topbar {
         .menu-handler {
